--- a/src/index.css
+++ b/src/index.css
@@ -91,4 +91,24 @@ html, body{
     background-color: #1d9476; /* Change this to your desired color */
 }
 
-
+/* CSS for modified search suggestion box */
+.Suggestions {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    background-color: #1de9b6;
+    border: 1px solid #ccc;
+    border-top: none;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    max-height: 200px;
+    overflow-y: auto;
+  }
+  
+  .Suggestions li {
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  
+  
