--- a/src/index.css
+++ b/src/index.css
@@ -139,10 +139,12 @@ html, body{
 
 #QRLogo{
     background: #dee1e2;
-    margin-top: 4px;
+    margin-top: 8px;
     margin-right: 4px;
     width: '100%';
     padding: 0;
     cursor: pointer;
+    border:  #dee1e2;
+    height: '44px'
 }
 
