--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html, body{
     padding: 12px 24px;
     border: 0;
     color: #000021;
-    background: #1de9b6;
+    background: #a0dcf0;
     line-height: 1.15;
     font-size: 16px;
     :hover {
@@ -37,13 +37,13 @@ html, body{
     outline: none;
     cursor: pointer;
     font-weight: 600;
-    border-radius: 3px;
     padding: 12px 24px;
     border: 0;
     color: #000021;
-    background: #1de9b6;
-    line-height: 1.15;
+    background: #669488;
+    line-height: 1;
     font-size: 16px;
+
     :hover {
         transition: all .1s ease;
         box-shadow: 0 0 0 0 #fff, 0 0 0 3px #1de9b6;
@@ -54,19 +54,19 @@ html, body{
 .InputBox {
     width: 100%;
     margin-top: 4px;
-    box-shadow: rgba(149, 157, 165, 0.15) 0px 3px 6px 0px;
-    font-size: 13px;
-    border-radius: 4px;
-    line-height: 1.5;
-    padding: 5px 10px;
-    transition: box-shadow 100ms ease-in, border 100ms ease-in, background-color 100ms ease-in;
-    border: 2px solid #dee1e2;
-    background: #dee1e2;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    line-height: 1;
+    border: 2px solid #a0dcf0;
+    background: #a0dcf0;
     display: block;
-    height: 30px;
+    height: 35px;
+    box-shadow: rgba(12, 12, 12, 0.1) 0px 10px 50px;
+    color: #797676;
+    font-size: 16px;
+    font-weight:600;
 }
 .InputBox:focus {
-    border-color: #dee1e2; /* Maintain the original border color */
+    border-color: #a0dcf0; /* Maintain the original border color */
     outline: none;
 }
 
@@ -75,17 +75,17 @@ html, body{
 
 .CheckboxDiv{
     border: solid;
-    background: #1de9b6;
-    max-width: 90%;
+    background: #7bf0d8;
+    max-width: 70%;
+    max-height: 85%;
     text-align: center;
     display: inline-block;
-    border-radius: 20px;
-    border-color: #000021;
-    margin: 10pxp,
+    border-radius: 5px;
+    border-color: #4d4d4d;
 }
 
 .CheckboxDiv .checkbox-image{
-    max-width: 70%;
+    max-width: 60%;
 }
 
 .clicked {
@@ -97,8 +97,8 @@ html, body{
     list-style-type: none;
     padding: 0;
     margin: 0;
-    background-color: #1de9b6;
-    border: 1px solid #ccc;
+    background-color: #a0dcf0; 
+    border: 1px solid #a0dcf0; 
     border-top: none;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     max-height: 200px;
@@ -120,15 +120,26 @@ html, body{
 #enterQRDiv{
     margin-top: 4px;
     display: flex;
-    background: #dee1e2;
+    background: #a0dcf0;
     flex-direction: row;
-    
+}
+#searchBarFullDiv{
+    display: flex;
+    flex-direction: row;
+    background: #a0dcf0;
+
 }
 
 #locateDiv{
-    margin: 10px;
+    width: 90%;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-left: 7px;
     border: solid;
-}
+    border-color: #4d4d4d;
+    border-radius: 5px;
+};
+
 
 #qrButton{ 
    
@@ -138,13 +149,13 @@ html, body{
 }
 
 #QRLogo{
-    background: #dee1e2;
+    background: #a0dcf0;
     margin-top: 8px;
     margin-right: 4px;
     width: '100%';
     padding: 0;
     cursor: pointer;
-    border:  #dee1e2;
+    border:  #a0dcf0;
     height: '44px'
 }
 
