--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,13 @@ html, body{
     cursor: pointer;
     font-weight: 600;
     border-radius: 3px;
+    text-align: center;
     padding: 12px 24px;
     border: 0;
-    color: #000021;
-    background: #a0dcf0;
+    color: #ededfd;
+    background: #0c380c;
     line-height: 1.15;
-    font-size: 16px;
+    font-size: 20px;
     :hover {
         transition: all .1s ease;
         box-shadow: 0 0 0 0 #fff, 0 0 0 3px #1de9b6;
