--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ html, body{
     
    
 
-    box-shadow: 0 25.6px 57.6px 0 rgb(0 0 0 / 22%), 0 4.8px 14.4px 0 rgb(0 0 0 / 18%);
+    
 }
 
 .Locatebuttons{
@@ -160,5 +160,21 @@ html, body{
     cursor: pointer;
     border:  #a0dcf0;
     height: '44px'
+}
+
+#mapaUC {
+    background: #0c380c;
+    color: #93fde3;
+    text-align: center;
+    padding-top: 4px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    position: relative; /* Ensure the positioning context is set */
+}
+
+#ucLogo {
+    position: absolute; /* Position relative to the nearest positioned ancestor */
+    bottom: 0; /* Position the image at the bottom of its containing block */
+    width: 32px;
 }
 
