--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html, body{
     color: #ededfd;
     background: #0c380c;
     line-height: 1;
-    font-size: 20px;
+    font-size: 12px;
     
     :hover {
         transition: all .1s ease;
@@ -165,7 +165,7 @@ html, body{
 #mapaUC {
     background: #0c380c;
     color: #93fde3;
-    text-align: center;
+    margin-left: 43.7%;
     padding-top: 4px;
     margin-top: 0px;
     margin-bottom: 0px;
@@ -174,7 +174,9 @@ html, body{
 
 #ucLogo {
     position: absolute; /* Position relative to the nearest positioned ancestor */
-    bottom: 0; /* Position the image at the bottom of its containing block */
+     /* Position the image at the bottom of its containing block */
     width: 32px;
+
+    
 }
 
