--- a/src/index.css
+++ b/src/index.css
@@ -37,21 +37,20 @@ html, body{
     width: 100%;
     height: auto;
     display: inline-block;
-    outline: none;
     cursor: pointer;
     font-weight: 600;
-    padding: 12px 24px;
-    border: 0;
     color: #000021;
     background: #669488;
     line-height: 1;
     font-size: 16px;
-
+    height: 38px;
+    border: 2px solid #0c380c;
+    margin-top: 0px;
     :hover {
         transition: all .1s ease;
         box-shadow: 0 0 0 0 #fff, 0 0 0 3px #1de9b6;
     }
-    box-shadow: rgba(149, 157, 165, 0.15) 0px 3px 6px 0px
+    
 }
 
 .InputBox {
@@ -79,16 +78,17 @@ html, body{
 .CheckboxDiv{
     border: solid;
     background: #7bf0d8;
-    max-width: 70%;
-    max-height: 100%;
+    width: 100%;
+    height: 42px;
     text-align: center;
     display: inline-block;
-    border-radius: 5px;
-    border-color: #4d4d4d;
+    
+    border-color: #0c380c;
+    
 }
 
 .CheckboxDiv .checkbox-image{
-    max-width: 60%;
+    max-height: 100%;
 }
 
 .clicked {
@@ -139,7 +139,7 @@ html, body{
     margin-top: 5px;
     margin-left: 7px;
     border: solid;
-    border-color: #4d4d4d;
+    border-color: #0c380c;
     border-radius: 5px;
 };
 
@@ -180,4 +180,7 @@ html, body{
 
     
 }
+
+
+
 
