--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ select{
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     line-height: 1;
     border: 2px solid #a0dcf0;
+    margin-left: 3px;
     background: #a0dcf0;
     display: block;
     height: 35px;
