--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,7 @@ input[type="checkbox" i] {
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     max-height: 200px;
     overflow-y: auto;
+    margin-left: 3px;
   }
   
   .Suggestions li {
@@ -186,6 +187,15 @@ input[type="checkbox" i] {
     position: relative;
 }
 
+.sticky-div {
+    position: fixed;
+    
+    width: 100%;
+    background-color:#7FFFD4;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000; /* You can adjust the z-index based on your needs */
+  
+}
 
 
 
