--- a/src/index.css
+++ b/src/index.css
@@ -188,7 +188,7 @@ input[type="checkbox" i] {
     position: fixed;
     
     width: 100%;
-    background-color:#7FFFD4;
+    background-color:#999999;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 1000; /* You can adjust the z-index based on your needs */
   
