--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,20 @@ select{
     height: 90%;
     cursor: pointer;
 }
+#reader {
+    display: none;
+    height: 300px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #000000;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    
+}
 
 
 .InputBox {
