--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,25 @@ html, body{
     background-color: #7FFFD4;
     overflow: hidden; 
 }
+.direction{
+    width: 100%;
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-weight: 600;
+    text-align: center;
+    padding: 12px 24px;
+    border: 0.2;
+    color: #ededfd;
+    background: #0c380c;
+    line-height: 0;
+    font-size: 15px;
+    background: linear-gradient(to middle-center, #ffffff 0%, #ffffff 50%, #000000 50%, #000000 100%);
+    :hover {
+        transition: all .1s ease;
+        box-shadow: 0 0 0 0 #fff, 0 0 0 3px #1de9b6;
+    }
+ }
 
 .pickButton{
     width: 100%;
@@ -217,6 +236,58 @@ button:focus {
     color: black; 
 }
 
+/* Style for popup container */
+.popup-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  overflow: hidden; /* Hide scrollbar */
+}
+/* Style for popup content */
+.popup-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  position: relative;
+  max-height: 80%; /* Set max height to allow scrolling */
+  overflow-y: auto; /* Enable vertical scrolling */
+}
 
+/* Style for exit button */
+.exit-button {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
 
+/* Style for image container */
+.image-container {
+  display: flex;
+  flex-direction: column; /* Display images vertically */
+}
+
+/* Style for individual images */
+.image-container img {
+  margin-bottom: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
 
