--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ html, body{
     overflow: hidden; 
 }
 .direction{
+    color: #000000;
     width: 100%;
     display: inline-block;
     outline: none;
@@ -16,7 +17,7 @@ html, body{
     text-align: center;
     padding: 12px 24px;
     border: 0.2;
-    color: #ededfd;
+    color: #45457e;
     background: #0c380c;
     line-height: 0;
     font-size: 15px;
@@ -258,14 +259,13 @@ button:focus {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   position: relative;
   max-height: 80%; /* Set max height to allow scrolling */
-  overflow-y: auto; /* Enable vertical scrolling */
 }
 
 /* Style for exit button */
 .exit-button {
   position: absolute;
-  top: -10px;
-  left: -10px;
+  top: 1%;
+  right: 5%;
   cursor: pointer;
   width: 30px;
   height: 30px;
