--- a/src/index.css
+++ b/src/index.css
@@ -350,13 +350,13 @@ button:focus {
 
 #upperLine {
     width: 100%;
-    height: 2px;
+    height: 2px; 
     background-color: black;
     position: absolute;
     top: 15px; /* Adjusted margin-top */
     left: 0;
     opacity: 1; /* Ensure the line is visible by default */
-}
+} /*center */
 
 #transitionDivContainer:hover #dropGuide,
 #transitionDivContainer:hover #clickGuide {
@@ -364,12 +364,15 @@ button:focus {
 }
 
 .popup-content {
-    max-height: 200px; /* Adjust according to your preference */
-    
+    max-height: 90%; /* Adjust according to your preference */
+    background-color: #9eb8c2;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE and Edge */
 }
 
+.ins{
+    max-width: 90%;
+}
 .popup-content::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera */
 }
