--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,8 @@ html, body{
     text-align: center;
     padding: 12px 24px;
     border: 0.2;
-    color: #bebeee;
-    background: #0c380c;
+    color: #000000;
+    background: #00ff00;
     line-height: 0;
     font-size: 15px;
     background: linear-gradient(to middle-center, #ffffff 0%, #ffffff 50%, #000000 50%, #000000 100%);
