--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,10 @@ html, body{
     padding: 12px 24px;
     border: 0.2;
     color: #000000;
-    background: #00ff00;
+    background: #00ff88;
     line-height: 0;
     font-size: 15px;
-    background: linear-gradient(to middle-center, #ffffff 0%, #ffffff 50%, #000000 50%, #000000 100%);
+    background: linear-gradient(to middle-center, #000000 0%, #000000 50%, #000000 50%, #000000 100%);
     :hover {
         transition: all .1s ease;
         box-shadow: 0 0 0 0 #fff, 0 0 0 3px #1de9b6;
