--- a/src/index.css
+++ b/src/index.css
@@ -368,6 +368,31 @@ button:focus {
     background-color: #9eb8c2;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE and Edge */
+    text-align: center;
+}
+.popup-content-ErrorMessage {
+    height: 30%; /* Adjust according to your preference */
+    background-color: #2d8d58;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    text-align: center;
+    align-content: center;
+    width: 50%;
+    border-radius: 60px;
+    
+}
+.popup-container-ErroMessage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    overflow: hidden; /* Hide scrollbar */
 }
 
 .ins{
@@ -375,4 +400,18 @@ button:focus {
 }
 .popup-content::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera */
+}
+.exit-buttons{
+    border-bottom: #00ff88;
+    border-radius: 50PX;
+    color: #000000;
+    background-color: #36835f;
+    border: none;
+
+    margin-top: 10%;
+    margin-bottom: 0%;
+}
+
+.errorHead{
+    margin: 10px;
 }
