--- a/src/index.css
+++ b/src/index.css
@@ -404,18 +404,20 @@ button:focus {
 .exit-buttons{
     border-bottom: #00ff88;
     border-radius: 50PX;
-    color: #000000;
-    background-color: #36835f;
+    color: #ffffff;
+    background-color: #113b28;
     border: none;
 
-    margin-top: 10%;
-    margin-bottom: 0%;
+    margin-top: 5%;
+    margin-bottom: 30%;
 }
 
-.errorHead{
+.errorBody{
     margin: 10px;
 }
-
+.errorHead{
+    margin: 5%;
+}
 .default-text{
     align-items: center;
     margin-top: 0%;
